--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -66,7 +66,14 @@ body {
   align-items: center;
   box-shadow: gray 4px 0px 4px;
 }
-
+.countdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.countdown h3 {
+  margin: 0;
+}
 .welcome {
   margin-top: 20%;
   font-size: 200%;
