--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -13,10 +13,10 @@ body {
 }
 @keyframes bounce {
   from {
-    transform: translateY(50px);
+    transform: translateY(10px);
   }
   to {
-    transform: translateY(-50px);
+    transform: translateY(-10px);
   }
 }
 .box-login {
@@ -53,9 +53,9 @@ body {
 
 /* ///////TOP BAR ////////// */
 .topbar {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
   padding: 12px;
   width: 100%;
   height: 50px;
@@ -128,12 +128,13 @@ body {
   border-radius: 5px;
   height: 82vh;
   padding: 5px;
-  border: gray 1px solid;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  /* border: gray 1px solid; */
 }
 .navi-box {
   /* border-left: 1px solid gray; */
-  overflow-x: hidden;
-  scroll-behavior: smooth;
+  
 }
 
 .quest-toprow {
@@ -169,8 +170,8 @@ li {
   font-weight: 400;
 }
 .question-number-box {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 3px;
   /* border: 1px solid black; */
   text-align: center;
@@ -182,19 +183,13 @@ li {
   cursor: pointer;
   box-shadow: 2px 2px 2px gray;
 }
-@media only screen and (max-width: 576px) {
-  .question-number-box {
-    width: 20px;
-    height: 20px;
-    font-size: 60%;
-  }
-}
+
 .question-number-box:hover {
   background-color: rgb(134, 233, 250);
   color: white;
 }
 .footer-box {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   /* left: 0; */
   height: 50px;
@@ -213,6 +208,8 @@ li {
   border-radius: 3px;
   border: 1px solid rgb(128, 192, 33);
   transition: all 400ms ease;
+  /* center text vertically in button */
+  line-height: 0;       
 }
 .previous-next:hover {
   background-color: rgb(109, 151, 45);
@@ -224,15 +221,25 @@ li {
   margin-left: auto;
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 640px) {
   .quest-box {
     height: 70vh;
   }
   .navi-box {
     height: 14vh;
   }
+  .question-number-box {
+    width: 20px;
+    height: 20px;
+    font-size: 60%;
+  }
+  .previous-next{
+    height: 30px;
+  }
 }
-
+/* @media only screen and (min-width: 640px) {
+.previous-next {height : 30px}
+} */
 .question-image {
   height: 100px;
   width: 150px;
