--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* overflow-y: hidden; */
   height: 100%;
-  /* background-color: honeydew; */
+  background-color: honeydew;
 }
 
 a {
