--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,10 @@ body {
   /* overflow-y: hidden; */
   height: 100%;
   background-color: honeydew;
+  background-image: url("/bg.jpg") ;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 a {
