--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -1,6 +1,7 @@
 body {
   background-color: honeydew;
 }
+
 /* //STARTING PAGE /// */
 .image-box {
   width: 200;
@@ -50,7 +51,20 @@ body {
   font-weight: bolder;
   cursor: pointer;
 }
-
+.my-box {
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+  padding: 8px;
+  box-shadow: 4px 4px 4px;
+}
+.my-alert {
+  display: block;
+  position: absolute;
+  margin-top: 40%;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+}
 /* ///////TOP BAR ////////// */
 .topbar {
   /* position: absolute;
@@ -123,7 +137,7 @@ body {
   height: 100vh;
   margin-top: 50px;
 }
-.test-page textarea{
+.test-page textarea {
   display: block;
   border: none;
   width: 100%;
@@ -134,12 +148,13 @@ body {
   background-color: honeydew;
   font-size: 1.2em;
   line-height: 1.15em;
-  overflow:scroll;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  overflow: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
-textarea::-webkit-scrollbar {display: none;}
-
+textarea::-webkit-scrollbar {
+  display: none;
+}
 
 .quest-box,
 .navi-box {
@@ -240,7 +255,7 @@ li {
 }
 
 @media only screen and (max-width: 480px) {
-  .test-page textarea{
+  .test-page textarea {
     font-size: 0.9em;
   }
   .quest-box {
