--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -20,6 +20,18 @@ body {
     transform: translateY(-10px);
   }
 }
+.smallLabel {
+  display: flex;
+  font-size: 0.9em;
+  align-items: center;
+  /* border: 1px solid red; */
+  padding: 10px;
+}
+.smallLabel input {
+  height: 18px;
+  width: 18px;
+  margin-right: 10px;
+}
 .box-login {
   display: flex;
   align-items: center;
@@ -303,6 +315,7 @@ li {
   .box {
     height: 100px;
   }
+
   .test-page textarea {
     font-size: 0.9em;
   }
@@ -386,6 +399,61 @@ li {
 /* ////////// TEST LIBRARY */
 .recent-tests {
   display: flex;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.readytest_1 {
+  background-position: center;
+  background-size: cover;
+  border-radius: 5%;
+  width: 9em;
+  padding-top: 0.5em;
+  height: 12em;
+  margin: 10px;
+  transition: all 200ms ease-in;
+}
+
+.readytest_1:hover {
+  /* transform: translateY(-10px); */
+  cursor: pointer;
+}
+.readytest_1 h1 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-left: 10px;
+  color: white;
+}
+.readytest_2 {
+  color: rgb(236, 232, 232);
+  /* border: 1px solid green; */
+  padding-top: 4rem;
+  padding-right: 10px;
+  padding-left: 10px;
+  line-height: 7px;
+}
+.readytest_2 h2 {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.readytest_2 p {
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+.blur-box {
+  /* background-color: #555; */
+  /* box-shadow: 0 0 1px 1px rgba(247, 245, 245, 0.5); */
+}
+.blur-box:hover {
+  box-shadow: 0 0 3px 3px rgb(236, 236, 236);
 }
 
 .test-lib-comp {
@@ -433,4 +501,43 @@ li {
   height: 30px;
   /* border: 1px solid red;
   background-color: #00c9c3; */
+}
+
+/* /// Mobile Screens //// */
+@media (max-width: 480px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  .readytest_1 {
+    width: 5em;
+    height: 7em;
+    padding-top: 4px;
+    margin: 4px;
+  }
+  .readytest_1 h1 {
+    font-size: 10px;
+    margin-left: 4px;
+  }
+  .readytest_2 {
+    padding-top: 2rem;
+    padding-right: 10px;
+    padding-left: 4px;
+    line-height: 2px;
+  }
+  .readytest_2 h2 {
+    font-size: 0.5em;
+    font-weight: bold;
+  }
+  .readytest_2 p {
+    font-size: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+/* // Dashboard ///// */
+.heading {
+  border: 1px solid red;
+}
+.tc {
+  display: flex;
+  justify-content: center;
 }
