--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,11 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* overflow-y: hidden; */
   height: 100%;
-  background-color: honeydew;
-  background-image: url("/bg.jpg") ;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  width: 100%;
+  /* background-color: rgb(54, 54, 54); */
+  background-color: #e84393;
+  background-image: linear-gradient(315deg, #e84393 0%, #000000 74%);
+  /* background-image: url("/bg.jpg"); */
 }
 
 a {
