--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@ body {
   height: 100%;
   width: 100%;
   /* background-color: rgb(54, 54, 54); */
-  background-color: #e84393;
-  background-image: linear-gradient(315deg, #e84393 0%, #000000 74%);
+  background-color: #845ec2;
+  /* background-image: linear-gradient(315deg, #e84393 0%, #000000 74%); */
   /* background-image: url("/bg.jpg"); */
 }
 
