--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -86,6 +86,20 @@ a:hover {
   margin-right: 20px;
   width: 60%;
 }
+.my-alert2 {
+  display: flex;
+  /* align-items: center; */
+  /* align-content: center; */
+  justify-content: center;
+position: fixed;
+border : 1px solid greenyellow;
+border-radius: 5px;
+background-color: #20aa20;
+color: white;
+width: 100%;
+
+/* margin: 10px; */
+}
 .my-spinner {
   position: fixed;
   left: 49%;
