--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -610,3 +610,83 @@ box-shadow: #c2f1f3 0px 0px 8px;
 .qmodal-image-question{
 display: flex;
 }
+
+.filter-row {
+  border-bottom : 1px solid #2f2f2f;
+  /* padding-bottom: 10px; */
+  display:flex;
+  flex-direction:row;
+  /* justify-content: space-between; */
+}
+.filter-row2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.my-button{
+  margin: 10px;
+  width: 80px;
+  height: 50%;
+  background-color: #3a373d;
+  color : white;
+  text-align: center;
+  border-radius: 5px;
+  transition: all 400ms ease-in;
+}
+.my-button:hover{
+  cursor: pointer;
+  box-shadow: 0px 0px 3px whitesmoke;
+}
+.my-input {
+  height: 50%;
+  margin: 10px;
+
+}
+
+/* ////// DROPDOWN CUSTOMISE ///////// */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  /* padding: 16px; */
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
