--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -617,7 +617,7 @@ display: flex;
   /* padding-bottom: 10px; */
   display:flex;
   flex-direction:row;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 .filter-row2{
   display: flex;
