--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -691,3 +691,15 @@ display: flex;
   background-color: #3e8e41;
 }
 
+.mybar {
+  box-sizing: border-box;
+  display: flex;
+  box-shadow:  0px 1px 5px #888;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  /* border: 2px solid red */
+}
+.mybar:hover {
+  /* box-shadow: 0px 1px 10px #888; */
+}
