--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -251,8 +251,10 @@ textarea::-webkit-scrollbar {
 .quest-box,
 .navi-box {
   border-radius: 5px;
-  /* height: 82vh; */
+  height: 80vh;
   padding: 5px;
+  background-color: rgba(255,255,255,0.05);
+  /* margin-bottom: 30px; */
   /* overflow-x: hidden;
   scroll-behavior: smooth; */
   box-shadow: 0px 0px 4px rgba(194, 219, 209, 0.5);
@@ -311,11 +313,11 @@ li {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 2px 2px 2px gray;
+  box-shadow: 1px 1px 2px rgb(255, 254, 254);
 }
 
 .question-number-box:hover {
-  background-color: rgb(134, 233, 250);
+  background-color: #603F8B;
   color: white;
 }
 .footer-box {
@@ -331,23 +333,28 @@ li {
   width: 100vw;
 }
 .previous-next {
+  display: flex;
   width: auto;
   padding: 8px 12px;
-  margin: 5px;
-  background-color: rgb(128, 192, 33);
+  margin: 10px;
+  background-color: #845ec2;
   border-radius: 3px;
-  border: 1px solid rgb(128, 192, 33);
-  height: 40px;
+  color: white;
+  box-shadow: 0px 0px 4px white;
+  /* border: 1px solid #786591; */
+  height: 30px;
+  justify-content: center;
+  align-items: center;
   transition: all 400ms ease;
   /* center text vertically in button */
   line-height: 0;
+  cursor: pointer;
 }
 .previous-next:hover {
-  background-color: rgb(109, 151, 45);
-  color: white;
+  background-color: #603F8B;
 }
 .finish-button {
-  background-color: rgb(128, 192, 33);
+  background-color:#845ec2;
   border: none;
   margin-left: auto;
 }
@@ -361,11 +368,11 @@ li {
     font-size: 0.9em;
   }
   .quest-box {
-    /* height: 70vh; */
+    height: 60vh;
   
   }
   .navi-box {
-    height: 14vh;
+    height: 23vh;
   }
   .question-number-box {
     width: 20px;
@@ -373,10 +380,15 @@ li {
     font-size: 60%;
   }
   .previous-next {
+    width: 60px;
     height: 30px;
+    font-size: small;
   }
 }
-@media only screen and (min-device-width: 480px) and (max-device-width: 640px) and (orientation: landscape) {
+@media only screen and (max-width : 780px) and (orientation: landscape) {
+  .quest-box{
+    background-color: #20aa20;
+  }
   .previous-next {
     height: 30px;
   }
@@ -398,7 +410,7 @@ li {
   }
 }
 .question-image:hover {
-  transform: scale(1.3) translate(9%, 8%);
+  /* transform: scale(1.3) translate(9%, 8%); */
 }
 .option-image {
   height: 60px;
