--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -274,7 +274,6 @@ textarea::-webkit-scrollbar {
 }
 .quest-question {
   /* margin-top: 20px; */
-
   min-height: 40px;
   max-height: fit-content;
   font-weight: 500;
@@ -385,9 +384,32 @@ li {
     font-size: small;
   }
 }
-@media only screen and (max-width : 780px) and (orientation: landscape) {
-  .quest-box{
-    background-color: #20aa20;
+.option-image {
+  height: 60px;
+  width: 100px;
+  border-radius: 3px;
+  margin: 2px 0;
+  /* transition: 300ms all ease; */
+}
+@media only screen and (max-width : 899px) and (orientation: landscape) {
+  .quest-box, .navi-box{
+    /* background-color: #20aa20; */
+    height: 70vh;
+    font-size: 0.6em;
+
+  }
+  .quest-question{
+    flex-direction: row;
+    /* font-size: 0.6em; */
+  }
+  .quest-box .question-image{
+    width: 40%;
+    height: 100px
+  }
+  .option-image {
+    width: 50px;
+    height: 30px;
+    /* border: 2px solid black; */
   }
   .previous-next {
     height: 30px;
@@ -412,13 +434,7 @@ li {
 .question-image:hover {
   /* transform: scale(1.3) translate(9%, 8%); */
 }
-.option-image {
-  height: 60px;
-  width: 100px;
-  border-radius: 3px;
-  margin: 2px 0;
-  /* transition: 300ms all ease; */
-}
+
 /* .option-image:hover{
   transform: scale(2);
 } */
