--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -265,7 +265,9 @@ textarea::-webkit-scrollbar {
 .navi-box {
   /* border-left: 1px solid gray; */
 }
+.solutions-navi-box{
 
+}
 .quest-toprow {
   height: 10%;
   display: flex;
@@ -371,8 +373,12 @@ li {
     height: 60vh;
   
   }
+
   .navi-box {
     height: 23vh;
+  }
+  .solutions-navi-box{
+    display: none;
   }
   .question-number-box {
     width: 20px;
@@ -433,7 +439,7 @@ height: 150px;
 }
 @media only screen and (max-width: 480px) {
   .question-image {
-    height: 80%;
+    height: 150px;
     width: 80%;
   }
 }
@@ -760,6 +766,7 @@ display: flex;
 .x-center{
  /* border: 1px solid red; */
  position: absolute;
+ top: 10px;
  transform: translateX(-50%);
  left : 50%;
 }
