--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -254,6 +254,7 @@ textarea::-webkit-scrollbar {
   height: 80vh;
   padding: 5px;
   background-color: rgba(255,255,255,0.05);
+  overflow: auto;
   /* margin-bottom: 30px; */
   /* overflow-x: hidden;
   scroll-behavior: smooth; */
@@ -373,6 +374,9 @@ li {
     height: 60vh;
   
   }
+  .question-text{
+    height: 80px;
+  }
 
   .navi-box {
     height: 23vh;
@@ -439,8 +443,8 @@ height: 150px;
 }
 @media only screen and (max-width: 480px) {
   .question-image {
-    height: 150px;
-    width: 80%;
+    height: 130px;
+    width: 75%;
   }
 }
 .question-image:hover {
