--- a/src/components/mycss.css
+++ b/src/components/mycss.css
@@ -191,25 +191,9 @@ width: 100%;
   transition: all 300ms ease;
 }
 .box:hover {
-  border: white 3px solid;
+  /* border: white 3px solid; */
 }
-.newQuestion-box {
-  /* background-color: #c25e84; */
-  background-image: url("/public/selecttest.png");
-  color: white;
-}
-.question-bank-box {
-  background-color: #530026;
-  color: antiquewhite;
-}
-.mystudents-box {
-  background-color: #00c9c3;
-  color: white;
-}
-.extra-box {
-  background-color: #ddd7c6;
-  color: black;
-}
+
 .test-page {
   /* display: flex; */
   /* position: relative; */
@@ -627,12 +611,29 @@ height: 150px;
   display: flex;
   justify-content: center;
 }
+.dbimages{
+  width:50%;
+  height: auto;
+  transition: all 400ms ease-in;
 
-/* /////// LIBRARY ///////// */
+}
+.dbimages:hover{
+  transform: scale(1.05);
+  /* border-bottom: white 2px solid; */
+  /* background-color: rgba(255,255,255,0.05); */
+}
+
+/* /////// LIBRARY  or Question Bank ///////// */
 .qbank_container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+.qbank-teacher{
+  color: white;
+  margin-left: 10px;
+  font-size: 20px;
+  margin-top: 0.4em;
 }
 .qcard_rect {
   display: flex;
@@ -643,7 +644,6 @@ height: 150px;
   margin: 8px;
   height: 160px;
   width: 200px;
-  /* border: 1px solid rgb(255, 255, 255); */
   border-radius: 8px;
   color: white;
   line-height: 1em;
@@ -654,6 +654,7 @@ height: 150px;
 cursor: pointer;
 box-shadow: #c2f1f3 0px 0px 8px;
 }
+
 .subject {
   font-size: 1.2em;
   font-weight: bold;
@@ -705,6 +706,42 @@ display: flex;
   height: 50%;
   margin: 10px;
 
+}
+
+/* ////// Question Bank or LIBRARY on MOBILE DEVICE //////////// */
+@media only screen and (max-width: 480px) {
+  .qbank-teacher{
+    display: none;
+  }
+  .qcard_rect{
+    height: 100px;
+    width: 90px;
+    margin: 4px;
+    border-radius: 4px;
+  }
+  .subject {
+    font-size: 0.8em;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+  .year {
+    margin-top: 0;
+    font-size: 0.7em;
+    margin-bottom: -10px;
+  }
+  .question_text {
+    font-size: 0.5em;
+    line-height: 1em;
+    font-weight: bolder;
+    font-style: italic;
+  }
+  .qmodal-body{
+    display: flex;
+    flex-direction: column;
+  }
+  .qmodal-image-question{
+  display: flex;
+  }
 }
 
 /* ////// DROPDOWN CUSTOMISE ///////// */
@@ -806,4 +843,34 @@ font-size: 1em;
 .pop-button{
   width: 80px;
   font-size: 10px;
+}
+
+/* /////////////////////////  TEACHER /////////////////////////////////////////////////// */
+
+/* /// TEACHER DASHBOARD /// */
+.newQuestion-box {
+/* background-color: #00c9c3; */
+}
+.newQuestion-box:hover{
+  background-color: rgba(255,255,255,0.05);
+}
+.question-bank-box {
+  background-color: #530026;
+  color: antiquewhite;
+}
+.mystudents-box {
+  background-color: #00c9c3;
+  color: white;
+}
+.extra-box {
+  background-color: #ddd7c6;
+  color: black;
+}
+
+/* /// TEACHER DASHBOARD on Mobile /// */
+@media only screen and (max-width: 480px) {
+  .box {
+    height: 150px;
+    margin: 5px;
+  }
 }
